[package]
name = "shlap"
version = "0.1.0"
authors = ["Matteo Guarda <matteoguarda@tutanota.com>"]
description = "Painless shell argument parsing."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agnipau/shlap"
readme = "README.md"
keywords = ["argument", "cli", "arg", "parser", "parse", "clap", "shell", "sh"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
# Crucial to use this version.
clap = { version = "2.33.3", features = ["yaml"] }
# Crucial to use this version, the same that clap 2.33.3 uses.
yaml-rust = "0.3.5"

anyhow = "1.0.32"
lazy_static = "1.4.0"
regex = "1.3.9"

