[package]
name = "slap-cli"
version = "1.2.0"
authors = ["Matteo G. <matteoguarda@tutanota.com>"]
description = "Painless shell argument parsing and dependency check."
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agnipau/slap"
readme = "README.md"
keywords = ["argument", "cli", "parse", "clap", "shell"]
categories = ["command-line-utilities", "command-line-interface"]
exclude = [
    "examples/*",
]

[dependencies]
# Crucial to use this version.
clap = { version = "2.33.3", features = ["yaml"] }
# Crucial to use this version, the same that clap 2.33.3 uses.
yaml-rust = "0.3.5"

anyhow = "1.0.32"
lazy_static = "1.4.0"
regex = "1.3.9"
which = "4.0.2"
serde_json = "1.0.57"
atty = { version = "0.2.14", optional = true }
termcolor = { version = "1.1.0", optional = true }

[features]
default = ["color"]
color = ["atty", "termcolor"]

[[bin]]
name = "slap"
path = "src/main.rs"

